<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/openCalculator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/open_calc"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="241dp" />

    <!--<ListView-->
        <!--android:id="@+id/entriesList"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:divider="#f00"-->
        <!--android:dividerHeight="1dp"-->

        <!--/>-->
    <TextView
        android:id="@+id/totalView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/averageNKI"
        android:layout_alignParentStart="true"

         />

    <TextView
        android:id="@+id/dataView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/totalNKI"
        android:layout_below="@id/totalView" />

    <ListView
        android:id="@+id/all_list"
        android:layout_width="368dp"
        android:layout_height="401dp"
        android:layout_below="@id/dataView" />

</RelativeLayout>